tests/lean/unifier_bug.lean.expected.out
unifier_bug.lean:7:0: error: type mismatch at application
  heq.rec_on H rfl
term
  rfl
has type
  eq.rec_on (type_eq_of_heq H) a = eq.rec_on (type_eq_of_heq H) a
but is expected to have type
  eq.rec_on (type_eq_of_heq H) a = b
